internationalization finished, some improvements

--- a/src/lib/components/css/navbar.css
+++ b/src/lib/components/css/navbar.css
@@ -41,7 +41,7 @@
 .p-accordion-content .navbar-tab-wrapper.active {
     border-width: 0px 3px 0px 0px !important;
     border: solid;
-    border-color: #14639e;
+    border-color: #5daedb;
 }
 
 /* Anpassen des Akkordion-Styles */
