--- a/src/lib/components/css/error.css
+++ b/src/lib/components/css/error.css
@@ -1,4 +1,4 @@
 .invalid {
-    color: #ce0037 !important;
-    border-color: #ce0037 !important;
+    color: var(--red) !important;
+    border-color: var(--red) !important;
 }
