Fixed styling, reload bug, key-warning in console

--- a/src/lib/components/css/navbar.css
+++ b/src/lib/components/css/navbar.css
@@ -28,8 +28,9 @@
     margin-left: 5%;
 }
 
-.navbar-tab-name {
+#navbar-tab-name {
     font-weight: bold;
+    margin-left: 10px;
 }
 
 .p-accordion-content .navbar-tab-wrapper {
