--- a/src/lib/components/css/constants.css
+++ b/src/lib/components/css/constants.css
@@ -1,5 +1,7 @@
 :root {
+    --navbar_width: 271px;
     --tab_height: 70px;
+    
     --blue_1: #5daedb;
     --blue_3: #14639e;
     --blue_4: #0e4a80;
