--- a/src/lib/components/css/navbar.css
+++ b/src/lib/components/css/navbar.css
@@ -9,14 +9,19 @@
 
 .group-name {
     text-transform: uppercase;
+    font-size: 1rem !important;
 }
 
 .group-logo {
-    width: 30px;
+    height: 1.2rem;
     /* Calculated from width of navigation logos */
     margin-left: 10px;
     /* Calculated from width of navigation logos */
     margin-right: 20px;
+}
+
+#navbar {
+    width: var(--navbar_width);
 }
 
 .navbar-tab {
