--- a/src/lib/components/css/constants.css
+++ b/src/lib/components/css/constants.css
@@ -8,6 +8,10 @@
     --blue-4: #0e4a80;
     --blue-5: #0c3868;
 
+    /* new COLOR CONSTANTS */
+
+    --blue3: #0091ff;
+
     --gray-1: #f0f0f0;
     --gray-2: #cdcdcd;
     --gray-3: #9a9a9a;
