--- a/src/components/css/authenticationView.css
+++ b/src/components/css/authenticationView.css
@@ -1,5 +1,8 @@
-#left-element{
-    width: 279px !important;
-    overflow-x: hidden;
+#left-element-authentication{
+   width: 300px !important;
+}
+
+#right-element-authentication{
+   width: 200px !important;
 }
 
