--- a/src/components/css/authenticationView.css
+++ b/src/components/css/authenticationView.css
@@ -1,8 +1,12 @@
 #left-element-authentication{
-   width: 300px !important;
+   width: 420px !important;
 }
 
 #right-element-authentication{
    width: 200px !important;
 }
 
+.darkmode-logos{
+   cursor: pointer;
+   margin-right: 16px;
+}
