--- a/src/components/css/constants.css
+++ b/src/components/css/constants.css
@@ -18,9 +18,9 @@
     --magenta-6: #fddeff;
 
     --gray-1: #f0f0f0;
-    --gray-2: #cdcdcd;
-    --gray-3: #9a9a9a;
-    --gray-4: #444444;
+    --gray-2: #DADADA;
+    --gray-3: #808080;
+    --gray-4: #333333;
 
     --yellow: #ffd800;
     --green: #80d800;
@@ -28,3 +28,4 @@
 
     --white: #ffffff;
 }
+
