--- a/src/components/navbar/tabs/tabs.css
+++ b/src/components/navbar/tabs/tabs.css
@@ -12,14 +12,12 @@
   width: 2px !important;
 }
 
-#hover-image {
-  .p-tooltip-text {
-    background-color: var(--magenta-2) !important;
-  }
+#hover-image .p-tooltip-text {
+  background-color: var(--magenta-2) !important;
+}
 
-  .p-tooltip-arrow {
-    color: var(--magenta-2) !important;
-  }
+#hover-image .p-tooltip-arrow {
+  color: var(--magenta-2) !important;
 }
 
 #secondActiveLine {
