continuing the darkmode and colorsettings changes

--- a/src/components/css/constants.css
+++ b/src/components/css/constants.css
@@ -7,8 +7,8 @@
     --blue-2: #1446eb;
     --blue-3: #0091ff;
     --blue-4: #52c9ff;
-    --blue-5: #96e7ff;
-    --blue-6: #d2f5ff;
+    --blue-5: #CBE8ff;
+ 
 
     --magenta-1: #5500b4;
     --magenta-2: #a200e6;
@@ -17,15 +17,16 @@
     --magenta-5: #ffafff;
     --magenta-6: #fddeff;
 
-    --gray-1: #f0f0f0;
-    --gray-2: #DADADA;
-    --gray-3: #808080;
-    --gray-4: #333333;
+    --white: #ffffff;
+    --grey-1: #f0f0f0;
+    --grey-2: #DADADA;
+    --grey-3: #808080;
+    --grey-4: #333333;
+    --grey-5: #1A1A1A;
+    --black: #000000;
 
     --yellow: #ffd800;
     --green: #80d800;
     --red: #f80000;
-
-    --white: #ffffff;
 }
 
