continuing implementing the colorsettings of the darkmode

--- a/src/components/css/globalColors.css
+++ b/src/components/css/globalColors.css
@@ -44,3 +44,11 @@
   .color-grey-3{
     color: var(--grey-3);
   }
+
+  .color-blue-3{
+    color: var(--blue-3);
+  }
+
+  .color-red{
+    color: var(--red);
+  }
