finishing refactoring of setting individual colorschema

--- a/src/components/css/globalColors.css
+++ b/src/components/css/globalColors.css
@@ -1,7 +1,8 @@
 /* BACKGROUND CLASSES*/
-.bg-white{
+.bg-white-1{
   background-color: var(--white);
 }
+
 
 .bg-grey-4{
   background-color: var(--grey-4);
