--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,33 +1,6 @@
-:root {
-  --navbar-width: 271px;
-  --tab-height: 70px;
-  
-  --blue-0: #001a54;
-  --blue-1: #041e96;
-  --blue-2: #1446eb;
-  --blue-3: #0091ff;
-  --blue-4: #52c9ff;
-  --blue-5: #96e7ff;
-  --blue-6: #d2f5ff;
-  
-  --magenta-1: #5500b4;
-  --magenta-2: #a200e6;
-  --magenta-3: #dc46f3;
-  --magenta-4: #ff73fa;
-  --magenta-5: #ffafff;
-  --magenta-6: #fddeff;
-
-  --grey-1: #f0f0f0;
-  --grey-2: #cdcdcd;
-  --grey-3: #9a9a9a;
-  --grey-4: #444444;
-
-  --yellow: #ffd800;
-  --green: #80d800;
-  --red: #f80000;
-
-  --white: #ffffff;
-}
+/*
+Find the constants in the ./css/constants file
+*/
 
 body {
   margin: 0;
@@ -37,6 +10,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   position: relative;
+}
+
+html, body, #root {
+  height: 100%;
 }
 
 
