--- a/src/components/authentication/authenticationView.css
+++ b/src/components/authentication/authenticationView.css
@@ -11,3 +11,12 @@
    margin-right: 16px;
 }
 
+.inputLabel {
+   font-weight: bold;
+   margin-bottom: 5px;
+}
+
+.invalid {
+   color: var(--red) !important;
+   border-color: var(--red) !important;
+ }
