--- a/src/components/css/constants.css
+++ b/src/components/css/constants.css
@@ -36,7 +36,7 @@
     --dropdownBgHighlightfb: var(--black);
 }
 
-[data-theme="dark"]{
+[color-theme="dark"]{
     --contextmenubgmaincolorfb: var(--grey-5);
     --highlightcolorfb: var(--grey-3);
     --textAndIconMainColorfb: var(--white);
