--- a/src/components/css/globalColors.css
+++ b/src/components/css/globalColors.css
@@ -1,6 +1,16 @@
 /* BACKGROUND CLASSES*/
+
+/* TODO: Deprecation: Should be removed in 12.0.0 */
 .bg-white-1{
   background-color: var(--white);
+}
+
+.bg-white{
+  background-color: var(--white);
+}
+
+.bg-black{
+  background-color: var(--black);
 }
 
 .bg-grey-1{
@@ -22,11 +32,6 @@
 .bg-grey-5{
   background-color: var(--grey-5);
 }
-
-.bg-black{
-  background-color: var(--black);
-}
-
 
 
 .bg-blue-0{
@@ -96,6 +101,10 @@
 .color-white{
   color: var(--white);
 }
+
+.color-black{
+  color: var(--black);
+}
   
 .color-grey-1{
   color: var(--grey-1);
@@ -117,10 +126,9 @@
   color: var(--grey-5);
 }
 
-.color-black{
-  color: var(--black);
+.color-blue-0{
+  color: var(--blue-0);
 }
-
 
 .color-blue-1{
   color: var(--blue-1);
