--- a/src/components/css/darkModeInputsWorkAround.css
+++ b/src/components/css/darkModeInputsWorkAround.css
@@ -4,9 +4,26 @@ However, there is a work around using Webkit CSS properties. You can overwrite t
 For the background color there is no webkit CSS property. It can be overwritten by setting an "inset" shadow using the webkit property "-webkit-box-shadow" and adding
 a transition for the background which has a very long duration. By doing this the background color which is automatically set by Webkit will never appear and the shadow will be shown instead. */
 
-[color-theme="dark"] input:-webkit-autofill {
-    -webkit-text-fill-color: var(--white);
-    -webkit-box-shadow: 0 0 0px 1000px var(--grey-4) inset;
-    caret-color: var(--white);
-    transition: background-color 0s 600000s;
-  }
+/* If this option is not set, input fields will remain dark after switching from dark to light mode. */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: none;
+}
+
+[color-theme="dark"] input:-webkit-autofill,
+[color-theme="dark"] input:-webkit-autofill:hover,
+[color-theme="dark"] input:-webkit-autofill:focus,
+[color-theme="dark"] input:-webkit-autofill:active {
+  -webkit-text-fill-color: var(--white);
+  -webkit-box-shadow: 0 0 0px 1000px var(--grey-4) inset;
+  caret-color: var(--white);
+  transition: background-color 0s 600000s;
+}
+
+/* This property removes the transition for input text fields in dark mode which contain no value from an autofill menu.
+If this option is not set, the input fields will "blink" when a option from an autofill menu is chosen and then edited. */
+[color-theme="dark"] .p-inputtext {
+  transition: none;
+}
