--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,3 +1,9 @@
+#navbar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .simplebar-scrollbar {
   width: 6px;
   position: absolute !important;
@@ -17,8 +23,3 @@
   text-transform: uppercase;
   font-size: 1rem !important;
 }
-
-
-
-
-
