Removed duplicated interface, Readded bg-white-1, Adapted release notes for 11.1.0

--- a/src/components/css/globalColors.css
+++ b/src/components/css/globalColors.css
@@ -1,11 +1,7 @@
 /* BACKGROUND CLASSES*/
 
-/* TODO: Deprecation: Should be removed in 12.0.0 */
+/* This class is not named bg-white because of name conflicts with PrimeReact. */
 .bg-white-1{
-  background-color: var(--white);
-}
-
-.bg-white{
   background-color: var(--white);
 }
 
