changes according to ticket comment

--- a/src/components/navbar/tabs/tabs.css
+++ b/src/components/navbar/tabs/tabs.css
@@ -1,18 +1,40 @@
-.default-tab-style {
+.default-nav-element-wrapper {
+  height: 40px;
+}
+
+.default-nav-element-collapsed {
+  height: 40px;
   font-weight: 500;
   opacity: 1;
   cursor: pointer;
+}
+
+.default-nav-element-unfolded {
   height: 40px;
+  font-weight: 500;
+  opacity: 1;
+  cursor: pointer;
+}
+
+.default-tab-collapsed {
+  padding: 0px 8px 0px 8px;
+}
+
+.default-tab-unfolded {
+  padding: 0px 16px 0px 8px;
+}
+
+.default-nav-group-collapsed {
+  padding: 0px 12px 0px 12px;
+}
+
+.default-nav-group-unfolded {
   padding: 0px 16px 0px 8px;
 }
 
 #navbar-tab-name {
   font-size: 14px;
   margin-left: 8px;
-}
-
-#navbartab-general {
-  padding: 0px 16px 0px 2px;
 }
 
 #hover-image .p-tooltip-text {
