--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding-left: 8px;
+  margin-left: 8px;
 }
 
 #navbar-bottom-wrapper {
