--- a/src/components/navbar/tabs/tabs.css
+++ b/src/components/navbar/tabs/tabs.css
@@ -29,7 +29,8 @@
 }
 
 .default-nav-group-unfolded {
-  padding: 0px 16px 0px 8px;
+  padding-left: 8px;
+  padding-right: 16px;
 }
 
 #navbar-tab-name {
