Added color 6 and color menu special 1 for CSS; Prepared release 12.0.0

--- a/src/components/css/constants.css
+++ b/src/components/css/constants.css
@@ -13,11 +13,13 @@
     --magenta-5: #ffafff;
     --magenta-6: #fddeff;
 
-    --grey-1: #f0f0f0;
-    --grey-2: #DADADA;
-    --grey-3: #808080;
-    --grey-4: #333333;
-    --grey-5: #1A1A1A;
+    --grey-1: #f2f4f4;
+    --grey-2: #c8c6c6;
+    --grey-3: #969494;
+    --grey-4: #696969;
+    --grey-5: #333333;
+    --grey-6: #1A1A1A;
+    --grey-menu-special-1: #D6D9DE;
 
     --white: #ffffff;
     --black: #000000;
