--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-left: 4px;
+  padding-left: 4px;
+  
 }
 
 #navbar-bottom-wrapper {
