--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding-left: 4px;
-  
+  padding-top: 12px; 
 }
 
 #navbar-bottom-wrapper {
