Bug/ttt5 framework 208

--- a/src/components/navbar/tabs/tabs.css
+++ b/src/components/navbar/tabs/tabs.css
@@ -46,6 +46,7 @@
   color: var(--magenta-2) !important;
 }
 
-.navbar-tab-space {
+.navbar-tab-space,
+.justify-content-centernavbar-tab-space {
   margin-top: 4px;
 }
