Bug/ttt framework 210

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -23,3 +23,13 @@
 #header {
   height: 56px !important;
 }
+
+.p-overlaypanel {
+  &:before {
+    content:none;
+  }
+
+  &:after {
+    content:none;
+  }
+}
