--- a/packages/frontend-framework/src/components/uiLayer.css
+++ b/packages/frontend-framework/src/components/uiLayer.css
@@ -19,21 +19,21 @@
 /* Here general default styling is described. */
 
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    position: relative;
+  margin: 0;
+  font-family:
+    -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  position: relative;
 }
 
 .default-app-logo-text-style {
-    font-size: 24px;
-    font-family: "Roboto";
-    color: white;
+  font-size: 24px;
+  font-family: "Roboto";
+  color: white;
 }
 
 [color-theme="dark"] .default-app-logo-text-style {
-    color: var(--blue-3);
+  color: var(--blue-3);
 }
