--- a/packages/frontend-framework/src/css/constants.css
+++ b/packages/frontend-framework/src/css/constants.css
@@ -17,50 +17,50 @@
  */
 
 :root {
-    --blue-0: #001a54;
-    --blue-1: #041e96;
-    --blue-2: #1446eb;
-    --blue-3: #0091ff;
-    --blue-4: #52c9ff;
-    --blue-5: #CBE8ff;
+  --blue-0: #001a54;
+  --blue-1: #041e96;
+  --blue-2: #1446eb;
+  --blue-3: #0091ff;
+  --blue-4: #52c9ff;
+  --blue-5: #cbe8ff;
 
-    --magenta-1: #5500b4;
-    --magenta-2: #a200e6;
-    --magenta-3: #dc46f3;
-    --magenta-4: #ff73fa;
-    --magenta-5: #ffafff;
-    --magenta-6: #fddeff;
+  --magenta-1: #5500b4;
+  --magenta-2: #a200e6;
+  --magenta-3: #dc46f3;
+  --magenta-4: #ff73fa;
+  --magenta-5: #ffafff;
+  --magenta-6: #fddeff;
 
-    --grey-1: #f2f4f4;
-    --grey-2: #c8c6c6;
-    --grey-3: #969494;
-    --grey-4: #696969;
-    --grey-5: #333333;
-    --grey-6: #1A1A1A;
-    --grey-menu-special-1: #D6D9DE;
+  --grey-1: #f2f4f4;
+  --grey-2: #c8c6c6;
+  --grey-3: #969494;
+  --grey-4: #696969;
+  --grey-5: #333333;
+  --grey-6: #1a1a1a;
+  --grey-menu-special-1: #d6d9de;
 
-    --white: #ffffff;
-    --black: #000000;
+  --white: #ffffff;
+  --black: #000000;
 
-    --yellow: #ffd800;
-    --green: #80d800;
-    --red: #f80000;
-    /* fb: FallbackValue 
+  --yellow: #ffd800;
+  --green: #80d800;
+  --red: #f80000;
+  /* fb: FallbackValue 
        bg: Background
     */
-    --contextmenubgmaincolorfb: var(--white);
-    --highlightcolorfb: var(--blue-0);
-    --textAndIconMainColorfb: var(--black);
-    --textAndIconHighlightColorfb: var(--white);
-    --dropdownBgfb: var(--white);
-    --dropdownBgHighlightfb: var(--black);
+  --contextmenubgmaincolorfb: var(--white);
+  --highlightcolorfb: var(--blue-0);
+  --textAndIconMainColorfb: var(--black);
+  --textAndIconHighlightColorfb: var(--white);
+  --dropdownBgfb: var(--white);
+  --dropdownBgHighlightfb: var(--black);
 }
 
 [color-theme="dark"] {
-    --contextmenubgmaincolorfb: var(--grey-5);
-    --highlightcolorfb: var(--grey-3);
-    --textAndIconMainColorfb: var(--white);
-    --textAndIconHighlightColorfb: var(--white);
-    --dropdownBgfb: var(--grey-5);
-    --dropdownBgHighlightfb: var(--white);
+  --contextmenubgmaincolorfb: var(--grey-5);
+  --highlightcolorfb: var(--grey-3);
+  --textAndIconMainColorfb: var(--white);
+  --textAndIconHighlightColorfb: var(--white);
+  --dropdownBgfb: var(--grey-5);
+  --dropdownBgHighlightfb: var(--white);
 }
