--- a/packages/frontend-framework/src/components/navbar/navbar.css
+++ b/packages/frontend-framework/src/components/navbar/navbar.css
@@ -25,6 +25,8 @@
 
 #navbar-bottom-wrapper {
   margin-bottom: 16px;
+  align-items: center;
+  position: relative;
 }
 
 .simplebar-scrollbar {
@@ -45,4 +47,20 @@
 .group-name {
   text-transform: uppercase;
   font-size: 1rem !important;
+}
+
+#legal-doc-links {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+.legal-doc-link {
+  font-size: 14px;
+  font-weight: 400;
+  text-decoration: none;
+  color: var(--blue-0);
+}
+
+.legal-doc-link:hover {
+  color: var(--blue-3);
 }
