--- a/packages/frontend-framework/src/components/css/globalChangesOnPrimeReactComponents.css
+++ b/packages/frontend-framework/src/components/css/globalChangesOnPrimeReactComponents.css
@@ -17,61 +17,65 @@
  */
 
 .p-dropdown-panel .p-dropdown-items .p-dropdown-item {
-  background-color: var(--dropdownBg, var(--dropdownBgfb));
-  color: var(--dropdownBgHighlight, var(--dropdownBgHighlightfb));
+    background-color: var(--dropdownBg, var(--dropdownBgfb));
+    color: var(--dropdownBgHighlight, var(--dropdownBgHighlightfb));
 }
 
 .p-contextmenu {
-  background-color: var(
-    --contextmenubgmaincolor,
-    var(--contextmenubgmaincolorfb)
-  );
+    background-color: var(
+            --contextmenubgmaincolor,
+            var(--contextmenubgmaincolorfb)
+    );
 }
 
 .p-menuitem {
-  background-color: var(
-    --contextmenubgmaincolor,
-    var(--contextmenubgmaincolorfb)
-  );
+    background-color: var(
+            --contextmenubgmaincolor,
+            var(--contextmenubgmaincolorfb)
+    );
 }
 
 .p-contextmenu .p-menuitem.p-menuitem-active > .p-menuitem-link {
-  background-color: var(--highlightcolor, var(--highlightcolorfb));
+    background-color: var(--highlightcolor, var(--highlightcolorfb));
 }
 
 .p-contextmenu
-  .p-menuitem.p-menuitem-active
-  > .p-menuitem-link
-  .p-menuitem-icon,
+.p-menuitem.p-menuitem-active
+> .p-menuitem-link
+.p-menuitem-icon,
 .p-contextmenu
-  .p-menuitem.p-menuitem-active
-  > .p-menuitem-link
-  .p-submenu-icon {
-  color: var(--textAndIconHighlightColorfb, var(--textAndIconHighlightColorfb));
+.p-menuitem.p-menuitem-active
+> .p-menuitem-link
+.p-submenu-icon {
+    color: var(--textAndIconHighlightColorfb, var(--textAndIconHighlightColorfb));
 }
 
 .p-contextmenu
-  .p-menuitem.p-menuitem-active
-  > .p-menuitem-link
-  .p-menuitem-icon,
+.p-menuitem.p-menuitem-active
+> .p-menuitem-link
+.p-menuitem-icon,
 .p-contextmenu
-  .p-menuitem.p-menuitem-active
-  > .p-menuitem-link
-  .p-submenu-icon {
-  color: var(--textAndIconHighlightColorfb, var(--textAndIconHighlightColorfb));
+.p-menuitem.p-menuitem-active
+> .p-menuitem-link
+.p-submenu-icon {
+    color: var(--textAndIconHighlightColorfb, var(--textAndIconHighlightColorfb));
 }
 
 .p-contextmenu
-  .p-menuitem.p-menuitem-active
-  > .p-menuitem-link
-  .p-menuitem-text {
-  color: var(--textAndIconHighlightColorfb, var(--textAndIconHighlightColorfb));
+.p-menuitem.p-menuitem-active
+> .p-menuitem-link
+.p-menuitem-text {
+    color: var(--textAndIconHighlightColorfb, var(--textAndIconHighlightColorfb));
 }
 
 .p-contextmenu .p-menuitem-link .p-menuitem-text {
-  color: var(--textAndIconMainColor, var(--textAndIconMainColorfb));
+    color: var(--textAndIconMainColor, var(--textAndIconMainColorfb));
 }
 
 .p-contextmenu .p-menuitem-link .p-menuitem-icon {
-  color: var(--textAndIconMainColor, var(--textAndIconMainColorfb));
+    color: var(--textAndIconMainColor, var(--textAndIconMainColorfb));
+}
+
+.p-contextmenu .p-menuitem-link .p-submenu-icon {
+    color: var(--textAndIconMainColor, var(--textAndIconMainColorfb));
 }
